Fix hint z-index

--- a/webportal/css/dashboard.css
+++ b/webportal/css/dashboard.css
@@ -200,7 +200,7 @@ button:hover {
 	border-radius: 0.25rem;
 	padding: 0.25rem;
 	min-width: 10rem;
-	z-index: 1;
+	z-index: 2;
 	display: none;
 }
 
